.provarCaches/00D4P000000xR5ZUAU/objects/Flosum__Pull_Request_Reviewer__c.object
<CustomObject>
    <fields>
        <fullName>Flosum__Approval_Status__c</fullName>
        <formula>TEXT( Flosum__Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Branch__c</fullName>
        <formula>Flosum__Pull_Request__r.Flosum__Branch__r.Flosum__Branch_Name__c</formula>
        <label>Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Pull_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pull Request</label>
        <referenceTo>Flosum__Pull_Request__c</referenceTo>
        <relationshipLabel>Pull Request Reviewers</relationshipLabel>
        <relationshipName>Pull_Request_Reviewers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__Reviewer__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+Id , Flosum__User__r.FirstName +&apos; &apos;+ Flosum__User__r.LastName)</formula>
        <label>Reviewer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flosum__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pull_Request_Reviewers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Pull Request Reviewer</label>
    <nameField>
        <displayFormat>PRR-{000000}</displayFormat>
        <label>Pull Request Reviewer	 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pull Request Reviewers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>